--- a/desafio-form/style.css
+++ b/desafio-form/style.css
@@ -1,96 +1,75 @@
 body{
-
     padding: 0px;
     margin: 0px;
     font-family: Poppins-Regular,sans-serif;
     background-color: #f2f2f2;
 
 }
+/*
+   Deixando responsivo 
+*/
+#conteudo-principal{
+    width: 375px;
+    max-width: 100vw;
+    margin: 10% auto;
+    border: 1px solid red;
+}
 
 #div-form{
-    width: 390px;
-    margin: 20px auto;
-    background-color: #fff;
-    border-radius: 10px;
-}
-
-.letra-titulo{
-    padding:5px;
-    display: inline;
-    font-size: 38px;
-    color: #fff;
-}
-
-input{
     width: 100%;
-    height: 45px;
-    padding: 5px;
-    margin: 5px;
-    margin-bottom: 15px;
-    border: none;
-    outline: none;
-    border-width: 1%;
-    transition: 2s;
-}
-
-
-.botao-login{
-    background-color: #6a7dfe;
-    border: none;
-    margin-top: 30px;
-    width: 300px;
-    height: 50px;
-    border-radius: 20px;
-    padding: 0 20px;
-}
-.button-log{
-    color: #fff;
-    font-family:sans-serif;
-    font-size: 15px;
-}
-
-form{
-    padding: 77px 55px 33px;
+    max-width: 100vw;
     text-align: center;
+    padding: 15px;
+    border: 1px solid red;
+    box-sizing: border-box;
 }
 
-.div-letra-titulo{
-    background-color: black;
-    margin: 25px auto;
-    width: 50px;
-    border-radius: 10px;
-}
-.fazer-login{
-    margin-top: 150px;
-}
+/*         FIM          */
 
-/*  Links
+
+/*          Personalizando Titulo
 */
-
-a{
-    text-decoration: none;
-    color: black;
+.titulo-form{
+    text-align: center;
+    font-weight: bold;
+    box-sizing: border-box;
 }
-a:hover{
-    color: #6a7dfe;
+/*        FIM            */
+
+
+/*          Personalizando Input
+*/
+.input-form{
+    margin-top: 15px;
+    box-sizing: border-box;
 }
 
-button:hover{
-    transition: 2s;
-    background: -webkit-linear-gradient(left,#21d4fd,#b721ff);
-}
-
-/*input:active, input:hover{ 
-    width: 100%; 
-    border-bottom: 3px solid #6a7dfe;
-}*/
-
-.efeito-preenchimento{
-    width: 1%;
-    height: 2px;
-    background:-webkit-linear-gradient(left,#21d4fd,#b721ff);
-    transition: width 2s;
-}
-.efeito-preenchimento:hover{
+.input-form input{
+    padding: 15px;
+    margin-top: 20px;
     width: 100%;
+    font-size: 1.1rem;
+    border: none;
+    box-sizing: border-box;
 }
+/*      FIM */
+
+
+/*      Personalizando Button */
+#button-lg{
+    margin-top: 20px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: blueviolet;
+    color: white;
+    box-sizing: border-box;
+}
+
+#fz-cadastro{
+    margin-top: 150px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
